data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1682.wast
;; 3. **Test Description:** Test `br_if` with a mix of nested `block`, `loop`, and `if` structures, ensuring correct branching behavior when the condition is false.    - **Specific Constraint:** Check stack unwinding for false condition in nested control structures.    - **Relation to Incorrect Condition Evaluation:** Verifies condition evaluation in nested contexts.

(assert_invalid
  (module
    (func $test_br_if_nested
      (block
        (block
          (loop
            (block (br_if 0 (i32.const 0)))
            (br_if 0 (i32.const 0))
          )
          (br_if 0 (i32.const 0))
        )
        (br_if 0 (i32.const 0))
      )
    )
  )
  "type mismatch"
)